# MPK_gpsTracker

./: CMakeLists.txt  README.md  config.txt  main.cpp
SIM7000X/: arduPi.h
SIM7000X/bcm2835/src/: bcm2835.c
include/: config.h  connection.h  gps.h  wifiSend.h
src/: config.cpp  gps.cpp  wifiSend.cpp
